--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="contLogoLat">
             <!-- <img src="img/ElementosParaWeb1.jpg" alt=""> -->
             <!-- Imagen blanco en caso de que quiera el background en blanco -->
-            <a href="#lutenteBody"><img src="img/LutenteOscuro.png" alt=""></a>
+            <a href="#lutenteBody"><img src="img/Home.png" alt=""></a>
         </div>
 
         <nav class="nav">
@@ -315,11 +315,15 @@
                     <button class="buttonFooter">CONTACTANOS</button>
                 </a>
                 
-                    <a href="#"><img src="./img/linkedin.png" alt="" class="iconFooter"></a>
-                    <a href="#"><img src="./img/instagram.png" alt="" class="iconFooter"></a>
+                <a href="#">
+                    <img src="./img/linkedin.png" alt="" class="iconFooter">
+                </a>
+                <a href="#">
+                    <img src="./img/instagram.png" alt="" class="iconFooter">
+                </a>
                 
-                <p>© Lutente 2023</p>
             </div>
+            <p>© Lutente 2023</p>
         </div>
         <!-- <div class="cont2Footer">
             <h2>Empresas que confian en nosotros:</h2>
