--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Formulario</title>
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 
@@ -13,7 +13,7 @@
     <div class="contLogoLat">
       <!-- <img src="img/ElementosParaWeb1.jpg" alt=""> -->
       <!-- Imagen blanco en caso de que quiera el background en blanco -->
-      <a href="../index.html"><img src="../img/LutenteOscuro.png" alt=""></a>
+      <a href="../index.html"><img src="../img/Home.png" alt=""></a>
     </div>
 
     <nav class="nav">
@@ -23,10 +23,29 @@
         <li><a href="../index.html">Beneficios</a></li>
         <li><a href="../index.html">¡Comienza ahora!</a></li>
       </ul>
+
+      <div class="respmenu">
+        <div class="contenedorHambur">
+          <img id="hamburResp" src="../img/menu.png" alt="">
+          <ul id="navigationResponsive" class="navigationResponsive">
+            <li><a href="../index.html">Modulos</a></li>
+            <li><a href="../index.html">Proceso de venta</a></li>
+            <li><a href="../index.html">Beneficios</a></li>
+            <li><a href="../index.html">¡Comienza ahora!</a></li>
+          </ul>
+        </div>
+        <div class="contenedorIngreso">
+          <img id="usuarioResp" src="../img/usuarioNav.png" alt="">
+          <div id="ingresoAppResp" class="ingresoAppResp">
+            <a href="./formulario.html">Registrarse</a>
+            <a href="https://lutente.com/DEMO/login.php" class="ingresar">Ingresar</a>
+          </div>
+        </div>
+      </div>
     </nav>
 
     <div class="ingresoApp">
-      <a href="./formulario.html">Registrarse</a>
+      <a href="./pages/formulario.html">Registrarse</a>
       <a href="https://lutente.com/DEMO/login.php" class="ingresar">Ingresar</a>
     </div>
   </header>
