--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -4,11 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
   <title>Formulario</title>
-=======
-  <title>Document</title>
->>>>>>> @{u}
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 
@@ -17,11 +13,7 @@
     <div class="contLogoLat">
       <!-- <img src="img/ElementosParaWeb1.jpg" alt=""> -->
       <!-- Imagen blanco en caso de que quiera el background en blanco -->
-<<<<<<< HEAD
       <a href="../index.html"><img src="../img/Home.png" alt=""></a>
-=======
-      <a href="../index.html"><img src="../img/LutenteOscuro.png" alt=""></a>
->>>>>>> @{u}
     </div>
 
     <nav class="nav">
@@ -31,7 +23,6 @@
         <li><a href="../index.html">Beneficios</a></li>
         <li><a href="../index.html">¡Comienza ahora!</a></li>
       </ul>
-<<<<<<< HEAD
 
       <div class="respmenu">
         <div class="contenedorHambur">
@@ -59,18 +50,8 @@
     </div>
   </header>
 
-=======
-    </nav>
-
-    <div class="ingresoApp">
-      <a href="./formulario.html">Registrarse</a>
-      <a href="https://lutente.com/DEMO/login.php" class="ingresar">Ingresar</a>
-    </div>
-  </header>
-
->>>>>>> @{u}
-  <section class="sectionForm">
-    <form action="https://formsubmit.co/5364780814bf3c6897f2f07aeeb7a89c " method="POST" class="form">
+@{u}
+7a89c " method="POST" class="form">
 
       <ul>
         <li class="listaForm">
