--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -50,8 +50,8 @@
     </div>
   </header>
 
-@{u}
-7a89c " method="POST" class="form">
+  <section class="sectionForm">
+    <form action="https://formsubmit.co/5364780814bf3c6897f2f07aeeb7a89c " method="POST" class="form">
 
       <ul>
         <li class="listaForm">
