--- a/index.html
+++ b/index.html
@@ -321,20 +321,9 @@
             </div>
             <p>© Lutente 2023</p>
         </div>
-        <!-- <div class="cont2Footer">
-            <h2>Empresas que confian en nosotros:</h2>
-            <div class="empresasFooter">
-                <a href="#"><img src="./img/manzana.png" alt="" class="empresaFooter"></a>
-                <a href="#"><img src="./img/huawei.png" alt="" class="empresaFooter"></a>
-                <a href="#"><img src="./img/itunes.png" alt="" class="empresaFooter"></a>
-                <a href="#"><img src="./img/manzana.png" alt="" class="empresaFooter"></a>
-                <a href="#"><img src="./img/huawei.png" alt="" class="empresaFooter"></a>
-                <a href="#"><img src="./img/itunes.png" alt="" class="empresaFooter"></a>
-            </div>
-        </div> -->
 
         
-        <img src="/img/pruebafooter8.png" alt="" class="dispositivosFooter">
+        <img src="/img/prueba1Footer.png" alt="" class="dispositivosFooter">
 
     </footer>
 
