--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../img/faviicon.png" type="png" sizes="40">
   <title>Formulario</title>
   <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -11,9 +12,7 @@
 <body class="bodyForm">
   <header class="main-header-form">
     <div class="contLogoLat">
-      <!-- <img src="img/ElementosParaWeb1.jpg" alt=""> -->
-      <!-- Imagen blanco en caso de que quiera el background en blanco -->
-      <a href="../index.html"><img src="../img/Home.png" alt=""></a>
+      <a href="../index.html"><img src="../img/Home.png" alt="Imagen Menu Lutente"></a>
     </div>
 
     <nav class="nav">
@@ -26,7 +25,7 @@
 
       <div class="respmenu">
         <div class="contenedorHambur">
-          <img id="hamburResp" src="../img/menu.png" alt="">
+          <img id="hamburResp" src="../img/menu.png" alt="menu hamburguesa responsive">
           <ul id="navigationResponsive" class="navigationResponsive">
             <li><a href="../index.html">Modulos</a></li>
             <li><a href="../index.html">Proceso de venta</a></li>
@@ -35,7 +34,7 @@
           </ul>
         </div>
         <div class="contenedorIngreso">
-          <img id="usuarioResp" src="../img/usuarioNav.png" alt="">
+          <img id="usuarioResp" src="../img/usuarioNav.png" alt="usuario responsive">
           <div id="ingresoAppResp" class="ingresoAppResp">
             <a href="./formulario.html">Registrarse</a>
             <a href="https://lutente.com/DEMO/login.php" class="ingresar">Ingresar</a>
@@ -55,27 +54,27 @@
 
       <ul>
         <li class="listaForm">
-          <label for="name"><img src="../img/usuario.png" alt="" class="iconForm"></label>
+          <label for="name"><img src="../img/usuario.png" alt="usuario name" class="iconForm"></label>
           <input type="text" id="name" name="name" placeholder="Nombre" class="inputForm" required />
         </li>
         <li class="listaForm">
-          <label for="lastname"><img src="../img/apellido.png" alt="" class="iconForm"></label>
+          <label for="lastname"><img src="../img/apellido.png" alt="usuario lastname" class="iconForm"></label>
           <input type="text" id="lastname" name="lastname" placeholder="Apellido" class="inputForm" required />
         </li>
         <li class="listaForm">
-          <label for="company"><img src="../img/maletin.png" alt="" class="iconForm"></label>
+          <label for="company"><img src="../img/maletin.png" alt="compania" class="iconForm"></label>
           <input type="text" id="company" name="company" placeholder="Empresa" class="inputForm" required />
         </li>
         <li class="listaForm">
-          <label for="number"><img src="../img/telefono-inteligente.png" alt="" class="iconForm"></label>
+          <label for="number"><img src="../img/telefono-inteligente.png" alt="celular" class="iconForm"></label>
           <input type="text" id="number" name="number" placeholder="Numero (opcional)" class="inputForm" />
         </li>
         <li class="listaForm">
-          <label for="mail"><img src="../img/correo-electronico.png" alt="" class="iconForm"></label>
+          <label for="mail"><img src="../img/correo-electronico.png" alt="correo" class="iconForm"></label>
           <input type="email" name="email" placeholder="Email" class="inputForm" required />
         </li>
         <li class="listaForm">
-          <label for="comments"><img src="../img/mensaje.png" alt="" class="iconForm"></label>
+          <label for="comments"><img src="../img/mensaje.png" alt="mensaje" class="iconForm"></label>
           <textarea id="comments" name="comments" placeholder="Comentario (opcional)" class="inputForm"></textarea>
         </li>
       </ul>
