--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -50,7 +50,7 @@
   </header>
 
   <section class="sectionForm">
-    <form action="https://formsubmit.co/5364780814bf3c6897f2f07aeeb7a89c " method="POST" class="form">
+    <form action="https://formsubmit.co/372a1d143668052eebf084acf8271fdc" method="POST" class="form">
 
       <ul>
         <li class="listaForm">
@@ -58,16 +58,12 @@
           <input type="text" id="name" name="name" placeholder="Nombre" class="inputForm" required />
         </li>
         <li class="listaForm">
-          <label for="lastname"><img src="../img/apellido.png" alt="usuario lastname" class="iconForm"></label>
-          <input type="text" id="lastname" name="lastname" placeholder="Apellido" class="inputForm" required />
-        </li>
-        <li class="listaForm">
           <label for="company"><img src="../img/maletin.png" alt="compania" class="iconForm"></label>
-          <input type="text" id="company" name="company" placeholder="Empresa" class="inputForm" required />
+          <input type="text" id="company" name="company" placeholder="Empresa/Negocio (opcional)" class="inputForm"/>
         </li>
         <li class="listaForm">
           <label for="number"><img src="../img/telefono-inteligente.png" alt="celular" class="iconForm"></label>
-          <input type="text" id="number" name="number" placeholder="Numero (opcional)" class="inputForm" />
+          <input type="text" id="number" name="number" placeholder="Número (opcional)" class="inputForm" />
         </li>
         <li class="listaForm">
           <label for="mail"><img src="../img/correo-electronico.png" alt="correo" class="iconForm"></label>
