--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                     <div class="contButtonLutenteCloud">
 
                         <button class="buttonComienzaAhora"><a href="./pages/formulario.html">Solicita DEMO</a></button>
-
-
-                        <button class="buttonComienzaAhora"><a href="#">Mira el VIDEO</a></button>
+                        <button class="buttonComienzaAhora"><a href="https://lutente.com/DEMO/login.php">Entrar DEMO</a></button>
 
                     </div>
                 </div>
