--- a/index.html
+++ b/index.html
@@ -142,55 +142,58 @@
             <div id="ProcesosEspacio" class="ProcesosEspacio"></div>
             <!-- Procesos de arriba -->
             <div class="contPorcesosTotal">
-                <div class="contProcesos" data-aos="fade-up" data-aos-delay="200">
-                    <a href="#ProcesosEspacio" class="linkProceso">
-                        <div class="pruebaProcesos" id="proceso1">
-                            <p class="pPrueba">Cierre de venta</p>
-                        </div>
-                    </a>
-                    <a href="#ProcesosEspacio" class="linkProceso">
-                        <div class="pruebaProcesos" id="proceso2">
-                            <p class="pPrueba">Imputación pagos</p>
-                        </div>
-                    </a>
-                    <a href="#ProcesosEspacio" class="linkProceso">
-                        <div class="pruebaProcesos" id="proceso3">
-                            <p class="pPrueba">Asignación de trámite</p>
-                        </div>
-                    </a>
-                    <a href="#ProcesosEspacio" class="linkProceso">
-                        <div class="pruebaProcesos" id="proceso4">
-                            <p class="pPrueba">Entrega de carpeta</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Procesos de abajo -->
-                <div class="contProcesos2" data-aos="fade-up" data-aos-delay="300">
-                    <a href="#ProcesosEspacio" class="linkProceso2">
-                        <div class="pruebaProcesos2" id="proceso5">
-                            <p class="pPrueba2">Gestión de Prendas</p>
-                        </div>
-                    </a>
-                    <a href="#ProcesosEspacio" class="linkProceso2">
-                        <div class="pruebaProcesos2" id="proceso6">
-                            <p class="pPrueba2">Aprobación</p>
-                        </div>
-                    </a>
-                    <a href="#ProcesosEspacio" class="linkProceso2">
-                        <div class="pruebaProcesos2" id="proceso7">
-                            <p class="pPrueba2">Gestión de trámite</p>
-                        </div>
-                    </a>
-                </div>
+                
             </div>
+
+            <div class="contProcesos" data-aos="fade-up" data-aos-delay="200">
+                <a href="#ProcesosEspacio">      
+                <div  class="pruebaProcesos" id="proceso1">
+                    <p class="pPrueba">Cierre de venta</p>
+                </div>
+            </a>
+            
+            <a href="#ProcesosEspacio">
+                <div href="#ProcesosEspacio" class="pruebaProcesos" id="proceso2">
+                    <p class="pPrueba">Imputación pagos</p>
+                </div>
+            </a>
+            <a href="#ProcesosEspacio">
+                <div href="#ProcesosEspacio" class="pruebaProcesos" id="proceso3">
+                    <p class="pPrueba">Asignación de trámite</p>
+                </div>
+            </a>
+            <a href="#ProcesosEspacio">
+                <div href="#ProcesosEspacio" class="pruebaProcesos" id="proceso4">
+                    <p class="pPrueba">Entrega de carpeta</p>
+                </div>
+            </a>
+        </div>
+
+        <!-- Procesos de abajo -->
+        <div class="contProcesos2" data-aos="fade-up" data-aos-delay="300">
+            <a href="#ProcesosEspacio">
+            <div class="pruebaProcesos2" id="proceso5">
+                    <p class="pPrueba2">Gestión de Prendas</p>
+                </div>
+                </a>
+                <a href="#ProcesosEspacio">
+                <div class="pruebaProcesos2" id="proceso6">
+                    <p class="pPrueba2">Aprobación</p>
+                </div>
+</a>
+<a href="#ProcesosEspacio">
+                <div class="pruebaProcesos2" id="proceso7">
+                    <p class="pPrueba2">Gestión de trámite</p>
+                </div>
+            </a>
+        </div>
 
             <div class="contProcesosText" data-aos="fade-up" data-aos-delay="400">
                 <div class="ProcesosText animate__animated animate__zoomIn" id="ProcesosText1">
                     <img class="imgProcesos" src="img/ventas.png" alt="ventas">
 
                     <div class="ProcesoText">
-                        <h1>Cierra de venta</h1>
+                        <h1>Cierre de venta</h1>
                         <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
                             rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
                             vero? Est beatae illo maiores ratione!</p>
