--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
 
                     <div class="ProcesoText">
                         <h1>Cierre de venta</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p>Una vez realizado el acuerdo con el cliente se registra la venta en la plataforma incluyendo el alta del cliente.</p>
                     </div>
 
                 </div>
@@ -205,9 +203,7 @@
 
                     <div class="ProcesoText">
                         <h1>Imputación de pagos</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p> Se registran los pagos (efectivo, cheque, etc.) y se da seguimiento hasta cancelar el total.</p>
                     </div>
                 </div>
                 <div class="ProcesosText animate__animated animate__zoomIn" id="ProcesosText3">
@@ -215,9 +211,7 @@
 
                     <div class="ProcesoText">
                         <h1>Asignación de trámite</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p>Se asigna el trámite a gestoría.</p>
                     </div>
                 </div>
                 <div class="ProcesosText animate__animated animate__zoomIn" id="ProcesosText4">
@@ -225,9 +219,7 @@
 
                     <div class="ProcesoText">
                         <h1>Entrega de carpeta</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p>Gestoría retira el tramite y se hace la entrega del vehículo y carpeta al cliente.</p>
                     </div>
                 </div>
                 <div class="ProcesosText animate__animated animate__zoomIn" id="ProcesosText5">
@@ -235,9 +227,7 @@
 
                     <div class="ProcesoText">
                         <h1>Gestion de Prendas</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p>Si el cliente solicita crédito prendario, se cargan todos los datos para que serán enviados a las entidades financieras.</p>
                     </div>
                 </div>
                 <div class="ProcesosText animate__animated animate__zoomIn" id="ProcesosText6">
@@ -245,9 +235,7 @@
 
                     <div class="ProcesoText">
                         <h1>Aprobación</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p>La gerencia se asegura que todo en la transacción esté correcto para su aprobación.</p>
                     </div>
                 </div>
                 <div class="ProcesosText animate__animated animate__zoomIn" id="ProcesosText7">
@@ -255,9 +243,7 @@
 
                     <div class="ProcesoText">
                         <h1>Gestión de trámite</h1>
-                        <p>Loreaaam ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi molestiae iusto
-                            rerum, minus repellendus assumenda, rem totam sunt, placeat voluptates reiciendis eos unde
-                            vero? Est beatae illo maiores ratione!</p>
+                        <p> Se ingresa el tramite al registro y se da seguimiento.</p>
                     </div>
                 </div>
             </div>
